# s2u-translations

./: CMakeLists.txt  LICENSE
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
cmake/: sourcesdk.cmake
cmake/platform/: linux.cmake  macos.cmake  shared.cmake  windows.cmake
include/: translations.hpp
src/: translations.cpp
src/translations/: cphrase.cpp  key.cpp  phrase.cpp
src/translations/cphrase/: ccontent.cpp  cformat.cpp
src/translations/cphrase/cformat/: cframe.cpp
src/translations/phrase/: content.cpp  format.cpp
translations/: schema.json
